config: Revise color schemes across multiple configuration files for a cohesive dark theme
- Updated color values in kdeglobals, fuzzel_theme.ini, ghostty colors, and gtk.css files to enhance visual consistency.
- Adjusted Hyprland color settings for improved aesthetics and user experience.
- Modified layout and notification components to align with the new color scheme, ensuring a unified look throughout the interface.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(9b8c9bAA)
-#     col.inactive_border = rgba(4e4350AA)
+#     col.active_border = rgba(889393AA)
+#     col.inactive_border = rgba(3f4949AA)
 # }
 
 misc {
-    background_color = rgba(171118FF)
+    background_color = rgba(101414FF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(201a21FF)
-        col.text = rgba(ebdfe9FF)
+        bar_color = rgba(181c1cFF)
+        col.text = rgba(e0e3e2FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(ebdfe9), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(ebdfe9), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(ebdfe9), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(e0e3e2), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(e0e3e2), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(e0e3e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev3 = bordercolor rgba(75d7caAA) rgba(75d7ca77),pinned:1
+windowrulev3 = bordercolor rgba(88d3d5AA) rgba(88d3d577),pinned:1
