--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -31,104 +31,67 @@ gestures {
 }
 
 # --- VISUAL APPEARANCE --- #
-### --- NEON FUTURISTIC COLORSETS --- ###
 
-# NF‑1 : Cyber Teal Pulse
-# col.active_border   = rgba(0a0f12ee) rgba(00ffbbee) rgba(00ffbbee) rgba(0a0f12ee) 60deg
-# col.inactive_border = rgba(0a0f1288) rgba(00ffbb55) rgba(00ffbb55) rgba(0a0f1288) 60deg
+### --- AMOLED GLASS BORDER PRESETS --- ###
+# Chủ đề: glassmorphism trên nền AMOLED (đen sâu, viền neon/màu kẹo).
+# Gợi ý dùng với background rất tối + blur.
+#
+# Cách dùng:
+#   col.active_border   = <một trong các preset dưới>
+#   col.inactive_border = <phiên bản mờ hơn / ít bão hòa hơn>
+#
+# Lưu ý:
+# - Màu đầu và cuối thường gần đen để viền hòa vào nền.
+# - Màu giữa là accent sáng để tạo hiệu ứng phát sáng quanh cửa sổ.
 
-# NF‑2 : Neon Abyss
-# col.active_border   = rgba(05080cee) rgba(00ffbbee) rgba(008888ee) rgba(05080cee) 45deg
-# col.inactive_border = rgba(05080c88) rgba(00ffbb44) rgba(00888844) rgba(05080c88) 45deg
+# AG‑1 : Teal Frost
+# col.active_border   = rgba(020408ee) rgba(00f5ffdd) rgba(00d1ffaa) rgba(020408ee) 40deg
+# col.inactive_border = rgba(020408aa) rgba(00f5ff66) rgba(00d1ff55) rgba(020408aa) 40deg
 
-# NF‑3 : Matrix Flux
-# col.active_border   = rgba(001414ee) rgba(00ffbbee) rgba(00d9a0ee) rgba(001414ee) 135deg
-# col.inactive_border = rgba(00141488) rgba(00ffbb44) rgba(00d9a044) rgba(00141488) 135deg
+# AG‑2 : Cyan Glassline
+# col.active_border   = rgba(02040aee) rgba(00e5ffff) rgba(0090ffee) rgba(02040aee) 60deg
+# col.inactive_border = rgba(02040a99) rgba(00e5ff66) rgba(0090ff55) rgba(02040a99) 60deg
 
-# NF‑4 : Aether Wave
-# col.active_border   = rgba(0e0018ee) rgba(00ffbbee) rgba(5500ffee) rgba(0e0018ee) 45deg
-# col.inactive_border = rgba(0e001888) rgba(00ffbb44) rgba(5500ff44) rgba(0e001888) 45deg
+# AG‑3 : Neo Magenta Edge
+# col.active_border   = rgba(05000dee) rgba(ff33ffee) rgba(9f30ffee) rgba(05000dee) 55deg
+# col.inactive_border = rgba(05000d99) rgba(ff33ff77) rgba(9f30ff55) rgba(05000d99) 55deg
 
-# NF‑5 : Quantum Lime
-# col.active_border   = rgba(001510ee) rgba(00ffbbee) rgba(39ff66ee) rgba(001510ee) 30deg
-# col.inactive_border = rgba(00151088) rgba(00ffbb44) rgba(39ff6644) rgba(00151088) 30deg
+# AG‑4 : Violet Aurora
+# col.active_border   = rgba(050010ee) rgba(8b5dffdd) rgba(39ffbbee) rgba(050010ee) 85deg
+# col.inactive_border = rgba(05001099) rgba(8b5dff66) rgba(39ffbb55) rgba(05001099) 85deg
 
-# NF‑6 : Sunset Drive (teal → hồng san hô)
-# col.active_border   = rgba(120014ee) rgba(00ffbbee) rgba(ff5566ee) rgba(120014ee) 40deg
-# col.inactive_border = rgba(12001488) rgba(00ffbb44) rgba(ff556644) rgba(12001488) 40deg
+# AG‑5 : Lime Circuit
+# col.active_border   = rgba(030806ee) rgba(78ff66ee) rgba(00ffddcc) rgba(030806ee) 30deg
+# col.inactive_border = rgba(03080699) rgba(78ff6666) rgba(00ffdd55) rgba(03080699) 30deg
 
-# NF‑7 : Hyper Citrus (teal → vàng chanh)
-# col.active_border   = rgba(0a1300ee) rgba(00ffbbee) rgba(faff00ee) rgba(0a1300ee) 25deg
-# col.inactive_border = rgba(0a130088) rgba(00ffbb44) rgba(faff0044) rgba(0a130088) 25deg
+# AG‑6 : Ember Mint
+# col.active_border   = rgba(100307ee) rgba(ff7744ee) rgba(00ffd9cc) rgba(100307ee) 50deg
+# col.inactive_border = rgba(10030799) rgba(ff774477) rgba(00ffd955) rgba(10030799) 50deg
 
-# NF‑8 : Magenta Pulse (teal → tím hồng)
-# col.active_border   = rgba(050012ee) rgba(00ffbbee) rgba(d900ffee) rgba(050012ee) 60deg
-# col.inactive_border = rgba(05001288) rgba(00ffbb44) rgba(d900ff44) rgba(05001288) 60deg
+# AG‑7 : Glacier Neon
+# col.active_border   = rgba(000812ee) rgba(66e0ffee) rgba(aaffffee) rgba(000812ee) 120deg
+# col.inactive_border = rgba(00081299) rgba(66e0ff77) rgba(aaffff55) rgba(00081299) 120deg
 
-# NF‑9 : Azure Circuit (teal → xanh dương điện)
-# col.active_border   = rgba(001018ee) rgba(00ffbbee) rgba(0090ffee) rgba(001018ee) 135deg
-# col.inactive_border = rgba(00101888) rgba(00ffbb44) rgba(0090ff44) rgba(00101888) 135deg
+# AG‑8 : Solar Pink
+# col.active_border   = rgba(12000eee) rgba(ff66aadd) rgba(ffe066dd) rgba(12000eee) 75deg
+# col.inactive_border = rgba(12000e99) rgba(ff66aa66) rgba(ffe06655) rgba(12000e99) 75deg
 
-# NF‑10 : Lava Mint (teal → cam‑đỏ)
-# col.active_border   = rgba(180700ee) rgba(00ffbbee) rgba(ff5500ee) rgba(180700ee) 50deg
-# col.inactive_border = rgba(18070088) rgba(00ffbb44) rgba(ff550044) rgba(18070088) 50deg
+# AG‑9 : Deep Matrix Teal
+# col.active_border   = rgba(001410ee) rgba(00ff88ee) rgba(00ffddee) rgba(001410ee) 95deg
+# col.inactive_border = rgba(00141099) rgba(00ff8866) rgba(00ffdd55) rgba(00141099) 95deg
 
-# NF-11 : Cyber Neon
-# col.active_border = rgba(000000ee) rgba(00ffbbdd) rgba(ff00ffdd) rgba(000000ee) 45deg
-# col.inactive_border = rgba(000000cc) rgba(00ffbb55) rgba(ff00ff55) rgba(000000cc) 45deg
-
-# --- FUCK THE MATRIX COLORSETS --- #
-# Theme intent: disruptive, glitchy, anti‑system riffs on classic Matrix neon.
-# Prefix FM‑x (Fuck Matrix) keeps parity with NF sets; all inactive borders use reduced alpha / warmer or desaturated glitch echoes.
-
-# FM‑1 : Glitch Rain Fracture (terminal green → toxic cyan)
-# col.active_border   = rgba(001610ee) rgba(00ff55ee) rgba(00ffddee) rgba(001610ee) 95deg
-# col.inactive_border = rgba(00161088) rgba(00ff5544) rgba(00ffdd44) rgba(00161088) 95deg
-
-# FM‑2 : Kernel Panic Flux (matrix green → anomaly magenta)
-# col.active_border   = rgba(001910ee) rgba(00ff55ee) rgba(ff00ffee) rgba(001910ee) 60deg
-# col.inactive_border = rgba(00191088) rgba(00ff5544) rgba(ff00ff44) rgba(00191088) 60deg
-
-# FM‑3 : Data Leak Pulse (phosphor green → breach red)
-# col.active_border   = rgba(021a10ee) rgba(00ff66ee) rgba(ff0033ee) rgba(021a10ee) 40deg
-# col.inactive_border = rgba(021a1088) rgba(00ff6644) rgba(ff003344) rgba(021a1088) 40deg
-
-# FM‑4 : Console Desync (emerald → warning amber → error magenta)
-# col.active_border   = rgba(031b10ee) rgba(00ff88ee) rgba(faff00ee) rgba(ff00ffee) 120deg
-# col.inactive_border = rgba(031b1088) rgba(00ff8844) rgba(faff0044) rgba(ff00ff44) 120deg
-
-# FM‑5 : Cipher Collapse (deep teal → ghost white → fracture cyan)
-# col.active_border   = rgba(041e21ee) rgba(00ffbbee) rgba(e0fffcee) rgba(041e21ee) 150deg
-# col.inactive_border = rgba(041e2188) rgba(00ffbb44) rgba(e0fffc44) rgba(041e2188) 150deg
-
-# FM‑6 : Neon Override (matrix green → override violet)
-# col.active_border   = rgba(001a12ee) rgba(00ff66ee) rgba(9f30ffee) rgba(001a12ee) 30deg
-# col.inactive_border = rgba(001a1288) rgba(00ff6644) rgba(9f30ff44) rgba(001a1288) 30deg
-
-# FM‑7 : Packet Storm (electric cyan → hazard yellow)
-# col.active_border   = rgba(00141aee) rgba(00ffddee) rgba(faff00ee) rgba(00141aee) 75deg
-# col.inactive_border = rgba(00141a88) rgba(00ffdd44) rgba(faff0044) rgba(00141a88) 75deg
-
-# FM‑8 : Root Breach (terminal green → breach orange → alarm red)
-# col.active_border   = rgba(051a00ee) rgba(00ff55ee) rgba(ff8800ee) rgba(ff2222ee) 95deg
-# col.inactive_border = rgba(051a0088) rgba(00ff5544) rgba(ff880044) rgba(ff222244) 95deg
-
-# FM‑9 : Memory Segfault (acid green → static gray → core red)
-# col.active_border   = rgba(001b12ee) rgba(00ff66ee) rgba(444444ee) rgba(ff2222ee) 110deg
-# col.inactive_border = rgba(001b1288) rgba(00ff6644) rgba(44444444) rgba(ff222244) 110deg
-
-# FM‑10 : Reality Overwrite (cyber teal → glitch magenta → warning lime)
-# col.active_border   = rgba(001a18ee) rgba(00ffccee) rgba(ff33ffee) rgba(39ff66ee) 85deg
-# col.inactive_border = rgba(001a1888) rgba(00ffcc44) rgba(ff33ff44) rgba(39ff6644) 85deg
+# AG‑10 : Noir Accent (tối giản, ít neon hơn)
+# col.active_border   = rgba(000000ee) rgba(30343aff) rgba(00ffccee) rgba(000000ee) 45deg
+# col.inactive_border = rgba(000000cc) rgba(30343aee) rgba(00ffcc66) rgba(000000cc) 45deg
 
 general {
     # layout = scrolling
     # layout = dwindle
     layout = master
 
-    # FM‑1 : Glitch Rain Fracture (terminal green → toxic cyan)
-    col.active_border   = rgba(001610ee) rgba(00ff55ee) rgba(00ffddee) rgba(001610ee) 95deg
-    col.inactive_border = rgba(00161088) rgba(00ff5544) rgba(00ffdd44) rgba(00161088) 95deg
+    # AG‑10 : Noir Accent (tối giản, ít neon hơn)
+    col.active_border   = rgba(000000ee) rgba(30343aff) rgba(00ffccee) rgba(000000ee) 45deg
+    col.inactive_border = rgba(000000cc) rgba(30343aee) rgba(00ffcc66) rgba(000000cc) 45deg
 
     # Gaps and border
     gaps_in = 3
@@ -249,8 +212,7 @@ animations {
     animation = windowsOut, 1, 3, macWindowClose, popin 87%
     animation = windowsMove, 1, 3, macFluid, slide
     animation = border, 1, 3, macUISmooth
-
-    # animation = borderangle, 1, 100, macUISmooth, loop
+    animation = borderangle, 1, 100, macUISmooth, loop
     
     # ============================================================================
     # OLD WINDOW ANIMATIONS (COMMENTED FOR ROLLBACK)
